# rapid-prototyper

./: .pilot-commands.yaml  .pilot-hints.md  .pilot-skills.yaml  Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt  vercel.json
app/: crud.py  database.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 25bc17892251_generate_initial_migration.py
prompts/: generate-pr-description.md.jinja2  initialize.md.jinja2  marketing-materials.md.jinja2
static/js/: main.js
templates/: base.html.jinja2  dashboard.html.jinja2  index.html.jinja2
