[tool.poetry]
name = "fastapi-app"
package-mode = false
version = "0.1.0"
description = "A FastAPI application with Jinja2 templates"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.112.0"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app:app --reload"